--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,39 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/watchlistFragment">
 
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.sidhant_verma_demo.presentation.holdings.HoldingsFragment"
-        android:label="Home"
-        tools:layout="@layout/fragment_holdings" />
+        android:id="@+id/watchlistFragment"
+        android:name="com.example.sidhant_verma_demo.presentation.main.WatchListFragment"
+        android:label="WatchList"
+        tools:layout="@layout/fragment_watchlist" />
 
     <fragment
-        android:id="@+id/homeFragment2"
-        android:name="com.example.sidhant_verma_demo.presentation.holdings.HoldingsFragment"
-        android:label="Home"
-        tools:layout="@layout/fragment_holdings" />
+        android:id="@+id/ordersFragment"
+        android:name="com.example.sidhant_verma_demo.presentation.main.OrdersFragment"
+        android:label="Orders"
+        tools:layout="@layout/fragment_orders" />
 
     <fragment
-        android:id="@+id/homeFragment3"
-        android:name="com.example.sidhant_verma_demo.presentation.holdings.HoldingsFragment"
-        android:label="Home"
-        tools:layout="@layout/fragment_holdings" />
-
-
-    <fragment
-        android:id="@+id/homeFragment4"
-        android:name="com.example.sidhant_verma_demo.presentation.holdings.HoldingsFragment"
-        android:label="Home"
-        tools:layout="@layout/fragment_holdings" />
-
+        android:id="@+id/portfolioFragment"
+        android:name="com.example.sidhant_verma_demo.presentation.main.PortfolioFragment"
+        android:label="Portfolio"
+        tools:layout="@layout/fragment_portfolio" />
 
     <fragment
-        android:id="@+id/homeFragment5"
-        android:name="com.example.sidhant_verma_demo.presentation.holdings.HoldingsFragment"
-        android:label="Home"
-        tools:layout="@layout/fragment_holdings" />
+        android:id="@+id/fundsFragment"
+        android:name="com.example.sidhant_verma_demo.presentation.main.FundsFragment"
+        android:label="Funds"
+        tools:layout="@layout/fragment_funds" />
 
+    <fragment
+        android:id="@+id/investFragment"
+        android:name="com.example.sidhant_verma_demo.presentation.main.InvestFragment"
+        android:label="Invest"
+        tools:layout="@layout/fragment_invest" />
 
 </navigation>
