Working on creating UI of the app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_shade">#FCFCFC</color>
     <color name="dark_blue_shade">#243B80</color>
+    <color name="grey_shade">#72727D</color>
 
 </resources>
