--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#243B80</color>
+    <color name="purple_700">#243B80</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -10,5 +10,5 @@
     <color name="white_shade">#FCFCFC</color>
     <color name="dark_blue_shade">#243B80</color>
     <color name="grey_shade">#72727D</color>
-
+    <color name="grey_shade_2">#F1F1F2</color>
 </resources>
