Added recycler view and adapters

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="dark_blue_shade">#243B80</color>
     <color name="grey_shade">#72727D</color>
     <color name="grey_shade_2">#F1F1F2</color>
+    <color name="grey_shade_7">#D2D2D6</color>
 </resources>
