--- a/app/src/main/res/layout/item_view_holdings.xml
+++ b/app/src/main/res/layout/item_view_holdings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,48 +10,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:text="HDFC"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tool:text="HDFC" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_ltp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:text="LTP: ₹634.70"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tool:text="LTP: ₹634.70" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_net_qty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:text="NET QTY: 43"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_stock_name"
+        tool:text="NET QTY: 43" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_pl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:text="P&amp;L: ₹4.54"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_ltp" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_ltp"
+        tool:text="P&amp;L: ₹4.54" />
 
     <View
         android:id="@+id/view"
