--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="grey_shade">#72727D</color>
     <color name="grey_shade_2">#F1F1F2</color>
     <color name="grey_shade_7">#D2D2D6</color>
+    <color name="red_shade">#BD423D</color>
+    <color name="green_shade">#389440</color>
+    <color name="grey_shade_4">#9C9CA5</color>
+
 </resources>
