--- a/app/src/main/res/drawable/bg_summary_card.xml
+++ b/app/src/main/res/drawable/bg_summary_card.xml
@@ -1,4 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
-    <corners android:radius="16dp" />
+    <solid android:color="@color/grey_shade_10" />
+    <corners
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp" />
 </shape>
