--- a/app/src/main/res/layout/fragment_positions.xml
+++ b/app/src/main/res/layout/fragment_positions.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Positions Fragment"
-        android:textColor="@color/black"
+        android:textColor="@color/black_shade"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
