--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#243B80</color>
-    <color name="purple_700">#243B80</color>
-    <color name="teal_200">#243B80</color>
+    <color name="purple_500">#133261</color>
+    <color name="purple_700">#133261</color>
+    <color name="teal_200">#133261</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_shade">#FCFCFC</color>
-    <color name="dark_blue_shade">#243B80</color>
+    <color name="dark_blue_shade">#133261</color>
     <color name="red_shade">#BD423D</color>
     <color name="green_shade">#389440</color>
     <color name="grey_shade">#72727D</color>
