--- a/app/src/main/res/layout/fragment_holdings.xml
+++ b/app/src/main/res/layout/fragment_holdings.xml
@@ -33,6 +33,7 @@
         layout="@layout/layout_portfolio_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
