--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -23,7 +23,7 @@
 
     <item
         android:id="@+id/investFragment"
-        android:icon="@drawable/ic_bottom_home"
+        android:icon="@drawable/ic_bottom_mf"
         android:title="Invest" />
 
 </menu>
